tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_metadata.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
---
name: test-skill
description: A test skill for metadata display
version: [VERSION]
tags: [test, metadata, display]
capabilities: [display_capability]
---
# Test Skill

This skill tests metadata display functionality.

## Usage

Used for testing metadata display.
