tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_nonexistent_skill.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Error: Skill 'nonexistent-skill' not found

Searched locations:
  ✓ [TEMP_DIR] (project)

Try:
  fastskill install owner/repo
  fastskill list                    # See available skills
