tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_nonexistent_skill_cli.snap
---
source: tests/cli/snapshot_helpers.rs
assertion_line: 195
expression: normalized
---
Error: Skill 'nonexistent-skill' not found

Searched locations:
  ✓ [TEMP_DIR] (project)
  ✓ [HOME_DIR]/.claude/skills (global)

Try:
  fastskill install owner/repo
  fastskill list                    # See available skills
