tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_skill_body.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
---
name: body-skill
description: Skill for testing body content display
version: [VERSION]
tags: [test, body]
---
# Body Skill

This skill has comprehensive body content for testing.

## Features

This skill demonstrates:
- Markdown rendering
- Multiple sections
- Code blocks
- Lists and tables

## Usage

Used to verify that skill body content is properly displayed in the CLI read command.

## Installation

Install this skill to test body content rendering.

## Examples

Example usage showing that the skill body should be displayed correctly.
