tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_tree_flag.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
meta-skill
  (no dependencies)
