tests/cli/snapshots/cli_tests__cli__snapshot_helpers__registry_add_missing_url.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
error[E003]: missing required argument <url-or-path>
  hint: Use --help to see required arguments
Error: missing required argument <url-or-path>
