tests/cli/snapshots/cli_tests__cli__snapshot_helpers__registry_list_empty.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
No repositories configured.
