tests/cli/snapshots/cli_tests__cli__snapshot_helpers__registry_remove_nonexistent.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Error: Configuration error: Failed to remove repository: Repository 'nonexistent-repo' not found
